syntax = "proto3";
package RestfulAgent;

message Get
{
	message Result
	{
		string id = 1;
		string content = 2;
	}
	string id = 1;
	string host = 2;
	string request = 3;
	string headers = 4;
}

message Post
{
	message Result
	{
		string id = 1;
		string content = 2;
	}
	string id = 1;
	string host = 2;
	string request = 3;
	string headers = 4;
	string body = 5;
}

message Error
{
	string id = 1;
	int32 err_code = 2;
	string reason = 3;
	string err_message = 4;
}
